--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,4 +1,15 @@
 ---
+- name: Add nginx apt repo key
+  apt_key:
+    url: http://nginx.org/packages/keys/nginx_signing.key
+    state: present
+
+- name: Add official nginx apt repository
+  apt_repository:
+    repo: deb https://nginx.org/packages/ubuntu/ {{ ansible_distribution_release }} nginx
+    state: present
+    filename: 'nginx'
+
 - name: Install nginx
   apt:
     name: nginx
