--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -38,6 +38,7 @@
   with_items:
     - /etc/nginx/sites-available/default
     - /etc/nginx/sites-enabled/default
+    - /etc/nginx/conf.d/default.conf
   when: nginx_delete_default_virtual_host == true
 
 - name: Verify virtual host configs
